2016-06-29  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chopstx_setpriority): Fix sched_lock/unlock.

2016-06-28  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.h (struct chx_poll_head): Declare here.

	* chopstx.c (chopstx_poll): Don't use varargs, but use
	an array of pointer.
	(chopstx_intr_wait): Follow the change of chopstx_poll.
	* eventflag.c (eventflag_wait_timeout): Likewise.
	* contrib/adc-stm32f103.c (adc_wait_completion): Likewise.
	* contrib/adc-mkl27z.c (adc_wait_completion): Likewise.

2016-06-16  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.0.
	* doc/chopstx.texi (VERSION): 1.0.

	* board/board-fst-01g.h: New.

2016-06-15  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chopstx_exit): Add "naked" attribute.

2016-06-14  Niibe Yutaka  <gniibe@fsij.org>

	* mcu/usb-stm32f103.c (usb_lld_ctrl_recv): Fix the state and make
	the endpoint 0 RX_VALID.

2016-06-10  NIIBE Yutaka  <gniibe@fsij.org>

	* usb_lld.h (USB_EVENT_OK): Rename.
	* mcu/usb-stm32f103.c: Update.
	* mcu/usb-mkl27z.c: Likewise.

	* example-cdc/usb-cdc.c: Follow the change of API.
	* example-fs-bb48/usb-cdc.c: Likewise.

2016-06-09  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/usb-stm32f103.c (usb_lld_ctrl_recv): Rename.
	(usb_lld_ctrl_send): Rename.
	(usb_lld_ctrl_ack): Rename and let have return value.
	* mcu/usb-mkl27z.c: Likewise.

	* example-cdc/usb-cdc.c: Follow the change of API.
	* example-fs-bb48/usb-cdc.c: Likewise.

2016-06-08  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/usb-stm32f103.c: Rewrite to be event driven API.
	* mcu/usb-mkl27z.c: Likewise.

	* example-cdc/usb-cdc.c: Update to new USB API.
	* example-fs-bb48/usb-cdc.c: Likewise.

	* example-cdc/tty.h: Change tty API to be C string (char*)
	friendly.
	* example-fs-bb48/tty.h: Ditto.

2016-06-02  Niibe Yutaka  <gniibe@fsij.org>

	* contrib/adc-mkl27z.c: Move from mcu.
	* contrib/adc-stm32f103.c: Move from mcu.

	* example-led/Makefile (CHIP): Define as stm32f0.

	* mcu/sys-stm32f0.h: Rename from sys-stm32f030.h,